# ms-simulation

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: binned_config.yaml  config.yaml  default_config.yaml  inference.yaml  obs_data_config.yaml  parquet_config.yaml  predfull_binned_config.yaml
configs/experiment/: large.yaml  small.yaml
docs/: ENVIRONMENT_SETUP.md  HYDRA_GUIDE.md  OBS_DATA_GUIDE.md  OBS_INTEGRATION_SUMMARY.md  PARQUET_DATA_GUIDE.md  PARQUET_SUMMARY.md  SETUP_SUMMARY.md
reference/: data-download.md  egpaper_final.tex  ms-simulation.md
scripts/: download_data.py  download_obs_data.py  inference.py  quick.sh  test_implementation.py  test_obs_connection.py  train.py  train_binned.py
src/ms_predictor/: __init__.py
src/ms_predictor/data/: __init__.py  data_prefetcher.py  dataset.py  hdf5_dataset.py  parquet_dataset.py  preprocessing.py  tokenizer.py
src/ms_predictor/inference/: __init__.py  predictor.py
src/ms_predictor/loss/: __init__.py  binned_cosine_loss.py  cosine_loss.py  hungarian_matching.py  set_loss.py
src/ms_predictor/model/: __init__.py  binned_predictor.py  binning_head.py  decoder.py  embeddings.py  encoder.py  heads.py  ms_predictor.py  predfull_binned_predictor.py  predfull_decoder.py  predfull_encoder.py  residual_block.py  se_block.py
src/ms_predictor/training/: __init__.py  config.py  trainer.py
src/ms_predictor/utils/: __init__.py  metrics.py
